# MMA

./: .env.example  .gitignore  AUTONOMOUS_ENGINEERING_ORCHESTRATION_SYSTEM_PRD_FINAL.md  README.md  mcp.cursor.json  pyproject.toml
docs/: CONFIGURATION_GUIDE.md  MCP_SETUP.md  OLLAMA_MODELFILES.md  ONBOARDING_WALKTHROUGH.md  WINDOWS_RUNBOOK.md
scripts/: Start-MMA.ps1  Status-MMA.ps1  Stop-MMA.ps1
src/mma/: __init__.py  assets.py  browser_qa.py  capabilities.py  cli.py  config.py  context.py  dag.py  db.py  failures.py  git_ops.py  github_api.py  http_api.py  locks.py  mcp_server.py  memory.py  orchestrator.py  patches.py  prompts.py  providers.py  resources.py  routing.py  scheduler.py  scout.py  secrets.py  security.py  services.py  telegram_bot.py  validation.py  watchdog.py
tests/: test_assets.py  test_browser_qa.py  test_capabilities.py  test_capability_invoke.py  test_cli.py  test_context.py  test_dag.py  test_db_migration.py  test_failures.py  test_github_api.py  test_http_api.py  test_locks.py  test_mcp_server.py  test_memory.py  test_patches.py  test_prompts.py  test_providers.py  test_routing.py  test_scheduler.py  test_scout.py  test_secrets.py  test_security.py  test_services.py  test_telegram_bot.py  test_watchdog.py
