[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mma"
version = "0.1.0"
description = "Local-first autonomous engineering orchestration prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
mma = "mma.cli:main"
mma-mcp = "mma.mcp_server:main"
mma-api = "mma.http_api:main"
mma-telegram = "mma.telegram_bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
